<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="8dp"
        android:autoText="false"
        android:elegantTextHeight="false"
        android:fontFamily="@font/nunito_sans"
        android:freezesText="true"
        android:text="@string/carovignoviva"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="32sp"
        android:typeface="normal"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="135dp"
            android:layout_height="125dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/stemma_carovigno"
            android:src="@mipmap/stemma" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button

            android:id="@+id/button_monumenti"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"

            android:background="@drawable/round_button"
            android:backgroundTint="#0091AD"

            android:contentDescription="@string/bottone"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/monumenti"
            android:textColor="@color/background_material_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_events"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"

            android:background="@drawable/round_button"
            android:backgroundTint="#0091AD"
            android:contentDescription="@string/bottone_eventi"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/eventi"
            android:textAllCaps="false"
            android:textColor="@color/background_material_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_citta"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#0091AD"
            android:contentDescription="@string/bottone"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/citt_vicine"
            android:textAllCaps="false"
            android:textColor="@color/background_material_light"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>