<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titolo_info_evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/image_evento"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/immagine_evento">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/navigatore_evento"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/button_for_navigator"
                android:src="@drawable/ic_round_navigation_24px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/navigatore_evento_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/button_for_navigator"
                android:text="@string/portami_qui"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/descrizione"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/descrizione_info_evento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contextClickable="false"
                android:fontFamily="@font/nunito_sans"
                android:justificationMode="inter_word"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>