<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="400dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="362dp"
        android:layout_height="204dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/card_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageListEventi">

        <TextView
            android:id="@+id/TextViewListTitleEvent"
            android:layout_width="239dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:lineSpacingExtra="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.331" />

        <TextView
            android:id="@+id/ora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="sans-serif"
            android:text="@string/ora_inizio"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewListTitleEvent" />

        <TextView
            android:id="@+id/ora2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="sans-serif"
            android:text="@string/ora_fine"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewListTitleEvent" />

        <TextView
            android:id="@+id/textViewListVisiteEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="154dp"
            android:layout_marginBottom="27dp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewListVisiteEvent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:layout_marginTop="154dp"
            android:layout_marginBottom="27dp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageListEventi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="244dp"
        android:contentDescription="@string/image_of_monuments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>